fix wrong width for featured label

--- a/netflox/featured/src/styles/index.css
+++ b/netflox/featured/src/styles/index.css
@@ -2,6 +2,7 @@
 
 .featured-label {
   position: relative;
+  width: 500px;
   bottom: 200px;
   left: 30px;
 }
